[gd_scene load_steps=3 format=3 uid="uid://2xu8nol00th8"]

[ext_resource type="Script" path="res://main_script_scene.gd" id="1_7mxmt"]
[ext_resource type="Texture2D" uid="uid://hhppj307klvw" path="res://44 sin título_20190321072107.png" id="2_3masx"]

[node name="trollino_contento" type="Node2D"]
script = ExtResource("1_7mxmt")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -202.0
offset_top = -117.0
offset_right = 1916.0
offset_bottom = 1035.0
color = Color(0.121569, 0.117647, 0.101961, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -9.0
offset_top = -1.0
offset_right = 1164.0
offset_bottom = 91.0
color = Color(0, 0, 0, 1)

[node name="Button4" type="Button" parent="."]
offset_left = 67.0
offset_top = 27.0
offset_right = 223.0
offset_bottom = 70.0
text = "TROLLINO"

[node name="Button6" type="Button" parent="."]
offset_left = 419.0
offset_top = 27.0
offset_right = 575.0
offset_bottom = 70.0
text = "TIMBA
"

[node name="Button5" type="Button" parent="."]
offset_left = 247.0
offset_top = 26.0
offset_right = 403.0
offset_bottom = 69.0
text = "MIKE
"

[node name="Button" type="Button" parent="."]
offset_left = 172.0
offset_top = 167.0
offset_right = 303.0
offset_bottom = 281.0
text = ".
"

[node name="Button2" type="Button" parent="."]
offset_left = 332.0
offset_top = 165.0
offset_right = 463.0
offset_bottom = 279.0
text = ".
"

[node name="Button3" type="Button" parent="."]
offset_left = 495.0
offset_top = 167.0
offset_right = 626.0
offset_bottom = 281.0
text = ".
"

[node name="44SinTítulo20190321072107" type="Sprite2D" parent="."]
position = Vector2(243, 223)
scale = Vector2(0.126042, 0.126042)
texture = ExtResource("2_3masx")

[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed_TIMBA"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed_MIKE"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed_timba_contento"]
